Mock actualizado y comienzo del ruteo

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   justify-content: space-between;
-  background-color: rgba(21, 71, 236, 0.438);
+  background-color: rgb(141, 38, 238);
 }
 
 .menuNavbar {
