--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   justify-content: space-between;
-  background-color: rgb(141, 38, 238);
+  background-color: rgb(0, 0, 0);
 }
 
 .menuNavbar {
@@ -19,7 +19,7 @@
   margin-left: 50px;
 }
 
-.enlaces {
+/* .enlaces {
   color: black;
   text-decoration: none;
-}
+} */
