--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   height: auto;
   display: flex;
   justify-content: space-between;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.589);
 }
 
 .menuNavbar {
@@ -18,8 +18,3 @@
   width: 100px;
   margin-left: 50px;
 }
-
-/* .enlaces {
-  color: black;
-  text-decoration: none;
-} */
